--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>MENU</title>
     <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="kontakty.css">
 </head>
 <body>
 <h1>
@@ -16,6 +17,53 @@
         <span><a href="kontakty.html">KONTAKTY</a></span>
         <span><a href="galerie.html">GALERIE</a> </span>
     </h2>
+    <div class="menu">
+        <p>Menu</p>
+        <table style="border-collapse: collapse; width: 100%; height: 163px;" border="1">
+            <tbody>
+            <tr style="height: 10px;">
+                <td style="width: 2.5%; height: 10px;">Smažen&aacute; r&yacute;že s kuřec&iacute;m masem 250g</td>
+                <td style="width: 2.5%; height: 10px;">89,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Smažen&aacute; r&yacute;že s krevetami&nbsp;250g</td>
+                <td style="width: 2.5%; height: 17px;">115,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Smažen&eacute; nudle s kuřec&iacute;m masem&nbsp;250g</td>
+                <td style="width: 2.5%; height: 17px;">89,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Smažen&eacute; nudle se zeleninou&nbsp;250g</td>
+                <td style="width: 2.5%; height: 17px;">79,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Smažen&eacute; r&yacute;žov&eacute; nudle se zeleninou250g</td>
+                <td style="width: 2.5%; height: 17px;">85,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Smažen&eacute; r&yacute;žov&eacute; nudle s kuřec&iacute;m masem&nbsp;250g</td>
+                <td style="width: 2.5%; height: 17px;">99,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Kuřec&iacute; směs s r&yacute;ž&iacute;</td>
+                <td style="width: 2.5%; height: 17px;">95,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Kuře se žampi&oacute;ny a r&yacute;ž&iacute;</td>
+                <td style="width: 2.5%; height: 17px;">99,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Kuře s bambusem a houbami, r&yacute;ž&iacute;</td>
+                <td style="width: 2.5%; height: 17px;">99,-</td>
+            </tr>
+            <tr style="height: 17px;">
+                <td style="width: 2.5%; height: 17px;">Kuře na kari s r&yacute;ž&iacute;</td>
+                <td style="width: 2.5%; height: 17px;">95,-</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
